Style: fix problem with z-index, fixed column header and site header

--- a/src/common/containers/Header/Header.module.less
+++ b/src/common/containers/Header/Header.module.less
@@ -14,7 +14,7 @@
 
 .Container {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   height: @header-height !important;
   padding: 0 50px;
